QuoteSocialNetwork.WEB/src/app/components/navbar/navbar.component.scss
.SideNav-CollapseButton {
    margin-left: 10px;
    margin-top: 12px;
    background-color: transparent;
}

.user-view {
  background-color: #73a1f3;
  background-position: -90px;
  background-size: 400px;
  padding: 32px 32px 16px;

  .avatar {
    width: 80px;
    height: 80px;
  }

  .name {
    font-size: 1.25em;
  }

  .name,
  .email {
    height: auto;
    line-height: 24px;
    padding: 0;
  }
}

:host #{'/deep/'} {
  a {
    i.caret {
      float: right;
      margin-right: -10px;
      -ms-transition: 0.2s;
      -webkit-transition: 0.2s;
      -o-transition:  0.2s;
      transition: 0.2s;
    }

    &.active {
      i.caret {
        -ms-transform: rotate(90deg);
        -webkit-transform: rotate(90deg);
        -o-transform:  rotate(90deg);
        transform: rotate(90deg);
      }
    }
  }
}

